ScreenTimeRewards/ScreenTimeRewards/Debug Reports/Build ScreenTimeRewards_2025-10-14T20-23-17.txt

Showing Recent Issues

Build target ScreenTimeRewards of project ScreenTimeRewards with configuration Debug

SwiftDriver ScreenTimeRewards normal arm64 com.apple.xcode.tools.swift.compiler (in target 'ScreenTimeRewards' from project 'ScreenTimeRewards')
    cd /Users/ameen/Documents/ScreenTime-BMAD/ScreenTimeRewards
    builtin-SwiftDriver -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name ScreenTimeRewards -Onone -enforce-exclusivity\=checked @/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64/ScreenTimeRewards.SwiftFileList -DDEBUG -default-isolation\=MainActor -enable-bare-slash-regex -enable-upcoming-feature DisableOutwardActorInference -enable-upcoming-feature InferSendableFromCaptures -enable-upcoming-feature GlobalActorIsolatedTypesUsability -enable-upcoming-feature MemberImportVisibility -enable-upcoming-feature InferIsolatedConformances -enable-upcoming-feature NonisolatedNonsendingByDefault -enable-experimental-feature DebugDescriptionMacro -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.0.sdk -target arm64-apple-ios15.0 -g -module-cache-path /Users/ameen/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -Xfrontend -serialize-debugging-options -profile-coverage-mapping -profile-generate -enable-testing -index-store-path /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Index.noindex/DataStore -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -swift-version 5 -I /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Products/Debug-iphoneos -F /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Products/Debug-iphoneos -emit-localized-strings -emit-localized-strings-path /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64 -c -j10 -enable-batch-mode -incremental -Xcc -ivfsstatcache -Xcc /Users/ameen/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphoneos26.0-23A339-81ce72e5b06c9602b9d30b56f2eed08a.sdkstatcache -output-file-map /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64/ScreenTimeRewards-OutputFileMap.json -use-frontend-parseable-output -save-temps -no-color-diagnostics -explicit-module-build -module-cache-path /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -clang-scanner-module-cache-path /Users/ameen/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -sdk-module-cache-path /Users/ameen/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -serialize-diagnostics -emit-dependencies -emit-module -emit-module-path /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64/ScreenTimeRewards.swiftmodule -validate-clang-modules-once -clang-build-session-file /Users/ameen/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/swift-overrides.hmap -emit-const-values -Xfrontend -const-gather-protocols-file -Xfrontend /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64/ScreenTimeRewards_const_extract_protocols.json -Xcc -iquote -Xcc /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/ScreenTimeRewards-generated-files.hmap -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/ScreenTimeRewards-own-target-headers.hmap -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/ScreenTimeRewards-all-target-headers.hmap -Xcc -iquote -Xcc /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/ScreenTimeRewards-project-headers.hmap -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Products/Debug-iphoneos/include -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/DerivedSources-normal/arm64 -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/DerivedSources/arm64 -Xcc -I/Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/DerivedSources -Xcc -DDEBUG\=1 -emit-objc-header -emit-objc-header-path /Users/ameen/Library/Developer/Xcode/DerivedData/ScreenTimeRewards-bekrbveahnxncbdjeerkehrxujzf/Build/Intermediates.noindex/ScreenTimeRewards.build/Debug-iphoneos/ScreenTimeRewards.build/Objects-normal/arm64/ScreenTimeRewards-Swift.h -working-directory /Users/ameen/Documents/ScreenTime-BMAD/ScreenTimeRewards -experimental-emit-module-separately -disable-cmo

/Users/ameen/Documents/ScreenTime-BMAD/ScreenTimeRewards/ScreenTimeRewards/Services/ScreenTimeService.swift:125:98: error: Editor placeholder in source file
                    try await AuthorizationCenter.shared.requestAuthorization(completionHandler: <#(Result<Void, any Error>) -> Void#>)
                                                                                                 ^ (in target 'ScreenTimeRewards' from project 'ScreenTimeRewards')

/Users/ameen/Documents/ScreenTime-BMAD/ScreenTimeRewards/ScreenTimeRewards/Services/ScreenTimeService.swift:125:98: Editor placeholder in source file
                    try await AuthorizationCenter.shared.requestAuthorization(completionHandler: <#(Result<Void, any Error>) -> Void#>)
                                                                                                 ^



Build failed    2025-10-14, 8:23 PM    0.3 seconds
